[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
#sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
#utils = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
#scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
#radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
#radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
#radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
#radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
#radix-substate-store-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
#scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
#state-manager = { git = "https://github.com/radixdlt/babylon-node", tag = "v1.2.1" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[workspace]
resolver = "2"
members= ["radix_pump", "hooks", "random_component"]

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
