[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-blueprint-schema-init = { git = "https://www.github.com/radixdlt/radixdlt-scrypto", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }

[patch.'https://github.com/radixdlt/radixdlt-scrypto']
sbor = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-common = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-engine-interface = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }
radix-blueprint-schema-init = { git = "https://www.github.com/radixdlt/radixdlt-scrypto.git", rev = "506293ad5c3ebde32cc2595053996153bc986a01" }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[workspace]
resolver = "2"
members= ["radix_pump", "hooks", "random_component"]

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
