[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
radix-blueprint-schema-init = { git = "https://www.github.com/radixdlt/radixdlt-scrypto", tag = "v1.2.0" }
cc = { version = "1.1.31" }
getrandom = { version = "0.2.15", features = ["js"] }

[profile.release]
opt-level = 'z'        # Optimize for size.
lto = true             # Enable Link Time Optimization.
codegen-units = 1      # Reduce number of codegen units to increase optimizations.
panic = 'abort'        # Abort on panic.
strip = true           # Strip the symbols.
overflow-checks = true # Panic in the case of an overflow.

[workspace]
resolver = "2"
members= ["radix_pump", "hooks/test_hooks", "hooks/ape_in", "hooks/lp_rewards", "hooks/limit_buy", "random_component", "timer"]

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
