[package]
name = "hooks"
version = "1.0.0"
edition = "2021"

[dependencies]
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", version = "1.2.0" }
scrypto-interface = { path = "../scrypto-interface" }
random = { git = "https://github.com/dot-random/dot-random", rev = "v0.1-scrypto-1.2.0", package = "random" }

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]
