[package]
name = "radix_pump"
version = "1.0.0"
edition = "2021"

[dependencies]
scrypto = { workspace = true }
radix-common = { workspace = true }
radix-engine-interface = { workspace = true }
scrypto-interface = { path = "../scrypto-interface" }
random = { git = "https://github.com/dot-random/dot-random", rev = "v0.1-scrypto-1.2.0", package = "random" }
getrandom = { workspace = true }

[dev-dependencies]
scrypto-test = { workspace = true }

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]
