[package]
name = "limit_buy_hook"
version = "1.0.0"
edition = "2021"

[dependencies]
scrypto = { workspace = true }
radix-common = { workspace = true }
radix-engine-interface = { workspace = true }
scrypto-interface = { path = "../../scrypto-interface" }

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]
